constraints/required_team_labels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: MustHaveLabels
metadata:
  name: deployment-labels
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
  parameters:
    labels:
      - env
      - service
      - tribe
      - dept
