tests/input/env_label_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    env: prod
spec:
  containers:
    - image: nginx:latest
      name: nginx
      resources:
        limits:
          cpu: "400m"
          memory: 512Mi
        requests:
          cpu: "200m"
          memory: 256Mi
  dnsPolicy: ClusterFirst
  restartPolicy: Always
